// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders 1`] = `
<React.Fragment>
  <div
    className="grid "
    key="modelFields"
  >
    <div
      className="grid-row0"
      key="field-row0"
    >
      <div
        className="grid-item--borderless field-label align_right"
        key="modelField0"
      >
        Address
      </div>
      <div
        className="grid-item--borderless field-label "
        key="fieldDiv0"
      >
        <EditModelInput
          componentKey="new"
          field={
            Object {
              "error": "At least one line of address must be entered",
              "fieldName": "address1",
              "header": "Address",
              "length": 100,
              "required": true,
              "type": "text",
            }
          }
          index={0}
          model={Object {}}
          onChange={[MockFunction]}
        />
      </div>
    </div>
    <div
      className="grid-row1"
      key="field-row1"
    >
      <div
        className="grid-item--borderless field-label align_right"
        key="modelField1"
      >
        Line 2
      </div>
      <div
        className="grid-item--borderless field-label "
        key="fieldDiv1"
      >
        <EditModelInput
          componentKey="new"
          field={
            Object {
              "fieldName": "address2",
              "header": "Line 2",
              "length": 100,
              "type": "text",
            }
          }
          index={1}
          model={Object {}}
          onChange={[MockFunction]}
        />
      </div>
    </div>
    <div
      className="grid-row2"
      key="field-row2"
    >
      <div
        className="grid-item--borderless field-label align_right"
        key="modelField2"
      >
        Line 3
      </div>
      <div
        className="grid-item--borderless field-label "
        key="fieldDiv2"
      >
        <EditModelInput
          componentKey="new"
          field={
            Object {
              "fieldName": "address3",
              "header": "Line 3",
              "length": 100,
              "type": "text",
            }
          }
          index={2}
          model={Object {}}
          onChange={[MockFunction]}
        />
      </div>
    </div>
    <div
      className="grid-row3"
      key="field-row3"
    >
      <div
        className="grid-item--borderless field-label align_right"
        key="modelField3"
      >
        Line 4
      </div>
      <div
        className="grid-item--borderless field-label "
        key="fieldDiv3"
      >
        <EditModelInput
          componentKey="new"
          field={
            Object {
              "fieldName": "address4",
              "header": "Line 4",
              "length": 100,
              "type": "text",
            }
          }
          index={3}
          model={Object {}}
          onChange={[MockFunction]}
        />
      </div>
    </div>
    <div
      className="grid-row4"
      key="field-row4"
    >
      <div
        className="grid-item--borderless field-label align_right"
        key="modelField4"
      >
        Country
      </div>
      <div
        className="grid-item--borderless field-label "
        key="fieldDiv4"
      >
        <EditModelInput
          componentKey="new"
          field={
            Object {
              "error": "A country must be selected",
              "fieldName": "country",
              "header": "Country",
              "required": true,
              "type": "country",
            }
          }
          index={4}
          model={Object {}}
          onChange={[MockFunction]}
        />
      </div>
    </div>
    <div
      className="grid-row5"
      key="field-row5"
    >
      <div
        className="grid-item--borderless field-label align_right"
        key="modelField5"
      >
        Postcode
      </div>
      <div
        className="grid-item--borderless field-label "
        key="fieldDiv5"
      >
        <EditModelInput
          componentKey="new"
          field={
            Object {
              "fieldName": "postcode",
              "header": "Postcode",
              "length": 20,
              "type": "text",
              "validator": [Function],
              "validatorAdditionalFields": Array [
                "country",
              ],
            }
          }
          index={5}
          model={Object {}}
          onChange={[MockFunction]}
        />
      </div>
    </div>
  </div>
</React.Fragment>
`;

exports[`it renders with data 1`] = `
<React.Fragment>
  <div
    className="grid red"
    key="modelFields"
  >
    <div
      className="grid-row0"
      key="field-row0"
    >
      <div
        className="grid-item--borderless field-label align_right"
        key="modelField0"
      >
        Address
      </div>
      <div
        className="grid-item--borderless field-label "
        key="fieldDiv0"
      >
        <EditModelInput
          brands={
            Array [
              Object {
                "brand_name": "id is 1",
                "id": 1,
              },
              Object {
                "brand_name": "find me",
                "id": 2,
              },
              Object {
                "brand_name": "id is 3",
                "id": 3,
              },
            ]
          }
          componentKey={123}
          field={
            Object {
              "error": "At least one line of address must be entered",
              "fieldName": "address1",
              "header": "Address",
              "length": 100,
              "required": true,
              "type": "text",
            }
          }
          index={0}
          model={
            Object {
              "address1": "line one",
              "address2": "line Ywo",
              "address3": "line Three",
              "address4": "line Four",
              "customer": 6,
              "id": 123,
              "postcode": "xxxyyy",
            }
          }
          onChange={[MockFunction]}
          persistedModel={
            Object {
              "address1": "line one",
              "address2": "line Ywo",
              "address3": "line Three",
              "address4": "line Four",
              "customer": 6,
              "id": 123,
              "postcode": "xxxyyy",
            }
          }
          sections={
            Array [
              Object {
                "id": 1,
                "partTypes": Array [
                  Object {
                    "id": 11,
                    "shortName": "id 11",
                  },
                  Object {
                    "id": 21,
                    "shortName": "id 11",
                  },
                ],
              },
              Object {
                "id": 2,
                "partTypes": Array [
                  Object {
                    "id": 2,
                    "shortName": "find me",
                  },
                  Object {
                    "id": 22,
                    "shortName": "id 11",
                  },
                ],
              },
            ]
          }
          suppliers={
            Array [
              Object {
                "id": 1,
                "supplier_name": "id is 1",
              },
              Object {
                "id": 2,
                "supplier_name": "find me",
              },
              Object {
                "id": 3,
                "supplier_name": "id is 3",
              },
            ]
          }
        />
      </div>
    </div>
    <div
      className="grid-row1"
      key="field-row1"
    >
      <div
        className="grid-item--borderless field-label align_right"
        key="modelField1"
      >
        Line 2
      </div>
      <div
        className="grid-item--borderless field-label "
        key="fieldDiv1"
      >
        <EditModelInput
          brands={
            Array [
              Object {
                "brand_name": "id is 1",
                "id": 1,
              },
              Object {
                "brand_name": "find me",
                "id": 2,
              },
              Object {
                "brand_name": "id is 3",
                "id": 3,
              },
            ]
          }
          componentKey={123}
          field={
            Object {
              "fieldName": "address2",
              "header": "Line 2",
              "length": 100,
              "type": "text",
            }
          }
          index={1}
          model={
            Object {
              "address1": "line one",
              "address2": "line Ywo",
              "address3": "line Three",
              "address4": "line Four",
              "customer": 6,
              "id": 123,
              "postcode": "xxxyyy",
            }
          }
          onChange={[MockFunction]}
          persistedModel={
            Object {
              "address1": "line one",
              "address2": "line Ywo",
              "address3": "line Three",
              "address4": "line Four",
              "customer": 6,
              "id": 123,
              "postcode": "xxxyyy",
            }
          }
          sections={
            Array [
              Object {
                "id": 1,
                "partTypes": Array [
                  Object {
                    "id": 11,
                    "shortName": "id 11",
                  },
                  Object {
                    "id": 21,
                    "shortName": "id 11",
                  },
                ],
              },
              Object {
                "id": 2,
                "partTypes": Array [
                  Object {
                    "id": 2,
                    "shortName": "find me",
                  },
                  Object {
                    "id": 22,
                    "shortName": "id 11",
                  },
                ],
              },
            ]
          }
          suppliers={
            Array [
              Object {
                "id": 1,
                "supplier_name": "id is 1",
              },
              Object {
                "id": 2,
                "supplier_name": "find me",
              },
              Object {
                "id": 3,
                "supplier_name": "id is 3",
              },
            ]
          }
        />
      </div>
    </div>
    <div
      className="grid-row2"
      key="field-row2"
    >
      <div
        className="grid-item--borderless field-label align_right"
        key="modelField2"
      >
        Line 3
      </div>
      <div
        className="grid-item--borderless field-label "
        key="fieldDiv2"
      >
        <EditModelInput
          brands={
            Array [
              Object {
                "brand_name": "id is 1",
                "id": 1,
              },
              Object {
                "brand_name": "find me",
                "id": 2,
              },
              Object {
                "brand_name": "id is 3",
                "id": 3,
              },
            ]
          }
          componentKey={123}
          field={
            Object {
              "fieldName": "address3",
              "header": "Line 3",
              "length": 100,
              "type": "text",
            }
          }
          index={2}
          model={
            Object {
              "address1": "line one",
              "address2": "line Ywo",
              "address3": "line Three",
              "address4": "line Four",
              "customer": 6,
              "id": 123,
              "postcode": "xxxyyy",
            }
          }
          onChange={[MockFunction]}
          persistedModel={
            Object {
              "address1": "line one",
              "address2": "line Ywo",
              "address3": "line Three",
              "address4": "line Four",
              "customer": 6,
              "id": 123,
              "postcode": "xxxyyy",
            }
          }
          sections={
            Array [
              Object {
                "id": 1,
                "partTypes": Array [
                  Object {
                    "id": 11,
                    "shortName": "id 11",
                  },
                  Object {
                    "id": 21,
                    "shortName": "id 11",
                  },
                ],
              },
              Object {
                "id": 2,
                "partTypes": Array [
                  Object {
                    "id": 2,
                    "shortName": "find me",
                  },
                  Object {
                    "id": 22,
                    "shortName": "id 11",
                  },
                ],
              },
            ]
          }
          suppliers={
            Array [
              Object {
                "id": 1,
                "supplier_name": "id is 1",
              },
              Object {
                "id": 2,
                "supplier_name": "find me",
              },
              Object {
                "id": 3,
                "supplier_name": "id is 3",
              },
            ]
          }
        />
      </div>
    </div>
    <div
      className="grid-row3"
      key="field-row3"
    >
      <div
        className="grid-item--borderless field-label align_right"
        key="modelField3"
      >
        Line 4
      </div>
      <div
        className="grid-item--borderless field-label "
        key="fieldDiv3"
      >
        <EditModelInput
          brands={
            Array [
              Object {
                "brand_name": "id is 1",
                "id": 1,
              },
              Object {
                "brand_name": "find me",
                "id": 2,
              },
              Object {
                "brand_name": "id is 3",
                "id": 3,
              },
            ]
          }
          componentKey={123}
          field={
            Object {
              "fieldName": "address4",
              "header": "Line 4",
              "length": 100,
              "type": "text",
            }
          }
          index={3}
          model={
            Object {
              "address1": "line one",
              "address2": "line Ywo",
              "address3": "line Three",
              "address4": "line Four",
              "customer": 6,
              "id": 123,
              "postcode": "xxxyyy",
            }
          }
          onChange={[MockFunction]}
          persistedModel={
            Object {
              "address1": "line one",
              "address2": "line Ywo",
              "address3": "line Three",
              "address4": "line Four",
              "customer": 6,
              "id": 123,
              "postcode": "xxxyyy",
            }
          }
          sections={
            Array [
              Object {
                "id": 1,
                "partTypes": Array [
                  Object {
                    "id": 11,
                    "shortName": "id 11",
                  },
                  Object {
                    "id": 21,
                    "shortName": "id 11",
                  },
                ],
              },
              Object {
                "id": 2,
                "partTypes": Array [
                  Object {
                    "id": 2,
                    "shortName": "find me",
                  },
                  Object {
                    "id": 22,
                    "shortName": "id 11",
                  },
                ],
              },
            ]
          }
          suppliers={
            Array [
              Object {
                "id": 1,
                "supplier_name": "id is 1",
              },
              Object {
                "id": 2,
                "supplier_name": "find me",
              },
              Object {
                "id": 3,
                "supplier_name": "id is 3",
              },
            ]
          }
        />
      </div>
    </div>
    <div
      className="grid-row4"
      key="field-row4"
    >
      <div
        className="grid-item--borderless field-label align_right"
        key="modelField4"
      >
        Country
      </div>
      <div
        className="grid-item--borderless field-label "
        key="fieldDiv4"
      >
        <EditModelInput
          brands={
            Array [
              Object {
                "brand_name": "id is 1",
                "id": 1,
              },
              Object {
                "brand_name": "find me",
                "id": 2,
              },
              Object {
                "brand_name": "id is 3",
                "id": 3,
              },
            ]
          }
          componentKey={123}
          field={
            Object {
              "error": "A country must be selected",
              "fieldName": "country",
              "header": "Country",
              "required": true,
              "type": "country",
            }
          }
          index={4}
          model={
            Object {
              "address1": "line one",
              "address2": "line Ywo",
              "address3": "line Three",
              "address4": "line Four",
              "customer": 6,
              "id": 123,
              "postcode": "xxxyyy",
            }
          }
          onChange={[MockFunction]}
          persistedModel={
            Object {
              "address1": "line one",
              "address2": "line Ywo",
              "address3": "line Three",
              "address4": "line Four",
              "customer": 6,
              "id": 123,
              "postcode": "xxxyyy",
            }
          }
          sections={
            Array [
              Object {
                "id": 1,
                "partTypes": Array [
                  Object {
                    "id": 11,
                    "shortName": "id 11",
                  },
                  Object {
                    "id": 21,
                    "shortName": "id 11",
                  },
                ],
              },
              Object {
                "id": 2,
                "partTypes": Array [
                  Object {
                    "id": 2,
                    "shortName": "find me",
                  },
                  Object {
                    "id": 22,
                    "shortName": "id 11",
                  },
                ],
              },
            ]
          }
          suppliers={
            Array [
              Object {
                "id": 1,
                "supplier_name": "id is 1",
              },
              Object {
                "id": 2,
                "supplier_name": "find me",
              },
              Object {
                "id": 3,
                "supplier_name": "id is 3",
              },
            ]
          }
        />
      </div>
    </div>
    <div
      className="grid-row5"
      key="field-row5"
    >
      <div
        className="grid-item--borderless field-label align_right"
        key="modelField5"
      >
        Postcode
      </div>
      <div
        className="grid-item--borderless field-label "
        key="fieldDiv5"
      >
        <EditModelInput
          brands={
            Array [
              Object {
                "brand_name": "id is 1",
                "id": 1,
              },
              Object {
                "brand_name": "find me",
                "id": 2,
              },
              Object {
                "brand_name": "id is 3",
                "id": 3,
              },
            ]
          }
          componentKey={123}
          field={
            Object {
              "fieldName": "postcode",
              "header": "Postcode",
              "length": 20,
              "type": "text",
              "validator": [Function],
              "validatorAdditionalFields": Array [
                "country",
              ],
            }
          }
          index={5}
          model={
            Object {
              "address1": "line one",
              "address2": "line Ywo",
              "address3": "line Three",
              "address4": "line Four",
              "customer": 6,
              "id": 123,
              "postcode": "xxxyyy",
            }
          }
          onChange={[MockFunction]}
          persistedModel={
            Object {
              "address1": "line one",
              "address2": "line Ywo",
              "address3": "line Three",
              "address4": "line Four",
              "customer": 6,
              "id": 123,
              "postcode": "xxxyyy",
            }
          }
          sections={
            Array [
              Object {
                "id": 1,
                "partTypes": Array [
                  Object {
                    "id": 11,
                    "shortName": "id 11",
                  },
                  Object {
                    "id": 21,
                    "shortName": "id 11",
                  },
                ],
              },
              Object {
                "id": 2,
                "partTypes": Array [
                  Object {
                    "id": 2,
                    "shortName": "find me",
                  },
                  Object {
                    "id": 22,
                    "shortName": "id 11",
                  },
                ],
              },
            ]
          }
          suppliers={
            Array [
              Object {
                "id": 1,
                "supplier_name": "id is 1",
              },
              Object {
                "id": 2,
                "supplier_name": "find me",
              },
              Object {
                "id": 3,
                "supplier_name": "id is 3",
              },
            ]
          }
        />
      </div>
    </div>
  </div>
</React.Fragment>
`;
